--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-    </head>>
+    </head>
     <body>
         <h1>Hello, World!</h1>
-    </body>>
-</html>>
+    </body>
+</html>
