I don't know what I do

--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>I try to do it</title>
+        <meta charset="UTF-8"> <!--Кодировка символов документа-->>
+        <title>I try to do it</title>  <!--Заголовок документа-->>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <!--<script src="script.js">`</sript>-->
     </head>
     <body>
-        <h1>Hello, World!</h1>
+         <div class="wrapper">
+             <div class="header">Header</div>
+             <div class="left-sidebar">Sidebar</div>
+             <div class="content">Here life img photo</div>
+             <div class="footer">Footer</div>
+         </div>
     </body>
 </html>
