--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"> <!--Кодировка символов документа-->>
-        <title>I try to do it</title>  <!--Заголовок документа-->>
+        <meta charset="UTF-8"> <!--Кодировка символов документа-->
+        <title>I try to do it</title>  <!--Заголовок документа-->
         <link rel="stylesheet" type="text/css" href="style.css">
         <!--<script src="script.js">`</sript>-->
     </head>
