skelet with div

--- a/hello.html
+++ b/hello.html
@@ -7,11 +7,27 @@
         <!--<script src="script.js">`</sript>-->
     </head>
     <body>
-         <div class="wrapper">
-             <div class="header">Header</div>
-             <div class="left-sidebar">Sidebar</div>
-             <div class="content">Here life img photo</div>
-             <div class="footer">Footer</div>
-         </div>
+        <div class="header">
+            <div class="logo">Logo img</div>
+        </div>
+        <div class="menu">
+            <ul class="navigation">Million li</ul>
+            <div class="icons">different icons, social, basket, search</div>
+        </div>
+        <div class="promo">
+            <div class="left-img"></div>
+            <div class="right-img"></div>
+        </div>
+        <div class="left-sidebar-menu"></div>
+        <div class="right-site-content">
+            <ul class="product-column-3">
+                <li class="memory-box">img</li>
+            </ul>
+        </div>
+        <div class="footer">
+            <div class="logo">Logo img</div>
+            <div>text in the colomn</div>
+            <div>three plashki</div>
+        </div>
     </body>
 </html>
