--- a/hello.html
+++ b/hello.html
@@ -7,27 +7,69 @@
         <!--<script src="script.js">`</sript>-->
     </head>
     <body>
-        <div class="header">
-            <div class="logo">Logo img</div>
+        <div class="container">
+            <div class="header">
+                <div class="logo">
+                    <img src="images/vetermagazine-logo.svg" alt="Logo vetermagazine">
+                </div> <!-- указывать путь для фоточек images/img.png-->>
+            </div>
+            <div class="menu">
+                <ul class="navigation">
+                    <li>
+                        <a href="">LIFESTYLE</a> <!--тег а создет гипертекстовые ссылки-->
+                    </li>
+                    <li>
+                        <a href="">БИЗНЕС</a>
+                    </li>
+                    <li>
+                        <a href="">ПУТЕШЕСТВИЯ</a>
+                    </li>
+                    <li>
+                        <a href="">WELLNESS</a>
+                    </li>
+                    <li>
+                        <a href="">ЕДА</a>
+                    </li>
+                    <li>
+                        <a href="">ДЕТИ</a>
+                    </li>
+                    <li>
+                        <a href="">ДОМ</a>
+                    </li>
+                    <li>
+                        <a href="">ПРОЕКТЫ</a>
+                    </li>
+                    <li>
+                        <a href="">VETER</a> <!-- +img -->
+                    </li>
+                </ul>
+                <div class="icons">different icons, social, basket, search
+                    <i class="icon-instagram"></i>
+                    <i class="icon-facebook"></i>
+                    <em>/</em> <!-- Выделяет важные фрагменты текста, отображая их курсивом -->
+                    <i class="icon-bag"></i>
+                    <i class="icon-heart-wishlist"></i>
+                    <i class="icon-user"></i>
+                    <i class="icon-search"></i>
+                </div>
+            </div>
         </div>
-        <div class="menu">
-            <ul class="navigation">Million li</ul>
-            <div class="icons">different icons, social, basket, search</div>
-        </div>
-        <div class="promo">
-            <div class="left-img"></div>
-            <div class="right-img"></div>
-        </div>
-        <div class="left-sidebar-menu"></div>
-        <div class="right-site-content">
-            <ul class="product-column-3">
-                <li class="memory-box">img</li>
-            </ul>
-        </div>
-        <div class="footer">
-            <div class="logo">Logo img</div>
-            <div>text in the colomn</div>
-            <div>three plashki</div>
+            <!--<div class="promo">
+                <div class="left-img"></div>
+                <div class="right-img"></div>
+            </div>
+            <div class="left-sidebar-menu"></div>
+            <div class="right-site-content">
+                <ul class="product-column-3">
+                    <li class="memory-box">img</li>
+                </ul>
+            </div> -->
+        <div class="container">
+            <div class="footer">
+                <div class="logo">Logo img</div>
+                <div class="different-info">text in the colomn</div>
+                <div class="buttons">three plashki</div>
+            </div>
         </div>
     </body>
 </html>
