--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="header">
                 <div class="logo">
-                    <img src="images/vetermagazine-logo.svg" alt="Logo vetermagazine">
+                    <img src="images/vetermagazine-logo.svg" width="120" height="77" alt="Logo vetermagazine">
                 </div> <!-- указывать путь для фоточек images/img.png-->>
             </div>
             <div class="menu">
