--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
         <!--<script src="script.js">`</sript>-->
     </head>
     <body>
-        <div class="container">
+        <div class="container-logo-icon">
             <div class="header">
                 <div class="logo">
                     <img src="images/vetermagazine-logo.svg" width="120" height="77" alt="Logo vetermagazine">
@@ -64,7 +64,7 @@
                     <li class="memory-box">img</li>
                 </ul>
             </div> -->
-        <div class="container">
+        <div class="container-footer">
             <div class="footer">
                 <div class="logo">Logo img</div>
                 <div class="different-info">text in the colomn</div>
